# hackfest-3.0-backend

./: README.md  jobs.sqlite  main.py  pyproject.toml  requirements.txt
api/: main.py
